--- a/source/app/edit_screen/edit_screen.kv
+++ b/source/app/edit_screen/edit_screen.kv
@@ -4,14 +4,14 @@
 
 <EditScreen>:
     box_layout: box_layout
-    word_name: word_name
-    word_translation: word_translation
-    word_meaning: word_meaning
-    word_synonym: word_synonym
-    word_antonym: word_antonym
-    word_examples: word_examples
     level_input: level_input
     submit_button: submit_button
+    word_antonym: word_antonym
+    word_examples: word_examples
+    word_meaning: word_meaning
+    word_name: word_name
+    word_synonym: word_synonym
+    word_translation: word_translation
 
     ScrollView:
         BoxLayout:
@@ -20,89 +20,104 @@
             size_hint_y: None
 
             ScrollLabel:
-                id: word_name
-                text: 'name'
-                halign: 'center'
-                padding: '0dp', '40dp'
+                color: font_color
                 font_size: '30dp'
+                halign: 'center'
+                id: word_name
+                padding: '0dp', '40dp'
+                text: 'name'
 
             ScrollLabel:
+                color: font_color
+                font_size: '25dp'
+                padding: '5dp', '5dp'
                 text: 'Translation'
-                font_size: '25dp'
-                padding: '5dp', '5dp'
 
             LineSeparator:
 
             ScrollLabel:
+                color: font_color
+                font_size: '17dp'
                 id: word_translation
+                padding: '30dp', '10dp'
                 text: 'translation'
-                padding: '30dp', '10dp'
-                font_size: '17dp'
 
             ScrollLabel:
+                color: font_color
+                font_size: '25dp'
+                padding: '5dp', '5dp'
                 text: 'Definition'
-                font_size: '25dp'
-                padding: '5dp', '5dp'
 
             LineSeparator:
 
             ScrollLabel:
+                color: font_color
+                font_size: '17dp'
                 id: word_meaning
+                padding: '30dp', '10dp'
                 text: 'meaning'
-                padding: '30dp', '10dp'
-                font_size: '17dp'
 
             ScrollLabel:
+                color: font_color
+                font_size: '25dp'
+                padding: '5dp', '5dp'
                 text: 'Synonyms'
-                font_size: '25dp'
-                padding: '5dp', '5dp'
 
             LineSeparator:
 
             ScrollLabel:
+                color: font_color
+                font_size: '17dp'
                 id: word_synonym
+                padding: '30dp', '10dp'
                 text: 'synonym'
-                padding: '30dp', '10dp'
-                font_size: '17dp'
 
             ScrollLabel:
+                color: font_color
+                font_size: '25dp'
+                padding: '5dp', '5dp'
                 text: 'Antonyms'
-                font_size: '25dp'
-                padding: '5dp', '5dp'
 
             LineSeparator:
 
             ScrollLabel:
+                color: font_color
+                font_size: '17dp'
                 id: word_antonym
-                text: 'antonym'
                 padding: '30dp', '10dp'
-                font_size: '17dp'
+                text: 'antonym'
 
             ScrollLabel:
-                text: 'Examples'
+                color: font_color
                 font_size: '25dp'
                 padding: '5dp', '5dp'
+                text: 'Examples'
 
             LineSeparator:
 
             ScrollLabel:
-                id: word_examples
-                text: 'example'
-                padding: '30dp', '10dp'
+                color: font_color
                 font_size: '17dp'
+                id: word_examples
+                padding: '30dp', '10dp'
+                text: 'example'
 
             Widget:
-                size_hint: 1, None
                 height: '30dp'
+                size_hint: 1, None
 
             TextInput:
+                height: '50dp'
                 id: level_input
                 size_hint_y: None
-                height: '50dp'
                 text: 'Change level'
 
             Button:
-                id: submit_button
-                size_hint_y: None
+                background_color: button_color
+                color: font_color
                 height: '50dp'
+                id: submit_button
+                on_press: self.background_color = button_pressed_color
+                on_release: self.background_color = button_color
+                size_hint_y: None
                 text: 'Submit'
