--- a/source/app/list_screen/list_screen.kv
+++ b/source/app/list_screen/list_screen.kv
@@ -6,6 +6,7 @@
     box: box
     grid: grid
     results: results
+    scroll_view: scroll_view
     BoxLayout:
         orientation: 'vertical'
         BoxLayout:
@@ -16,6 +17,7 @@
                 id: grid
                 size_hint: 1, 3
         ScrollView:
+            id: scroll_view
             size_hint: 1, 3
             BoxLayout:
                 id: results
