--- a/source/app/main_screen/main_screen.kv
+++ b/source/app/main_screen/main_screen.kv
@@ -15,10 +15,12 @@
     word_name: word_name
     word_synonym: word_synonym
     word_translation: word_translation
+    scroll_view: scroll_view
 
     BoxLayout:
         orientation: 'vertical'
         ScrollView:
+            id: scroll_view
             size_hint_y: 1
             BoxLayout:
                 id: box_layout
