--- a/source/app/list_screen/list_screen.kv
+++ b/source/app/list_screen/list_screen.kv
@@ -7,6 +7,7 @@
     grid: grid
     results: results
     scroll_view: scroll_view
+    counter: counter
     BoxLayout:
         orientation: 'vertical'
         BoxLayout:
@@ -16,6 +17,12 @@
                 cols: 5
                 id: grid
                 size_hint: 1, 3
+        BoxLayout:
+            size_hint_y: None
+            height: '20dp'
+            Label:
+                text: '0'
+                id: counter
         ScrollView:
             id: scroll_view
             size_hint: 1, 3
