Add level information

--- a/source/app/edit_screen/edit_screen.kv
+++ b/source/app/edit_screen/edit_screen.kv
@@ -9,6 +9,7 @@
     word_antonym: word_antonym
     word_examples: word_examples
     word_meaning: word_meaning
+    word_level: word_level
     word_name: word_name
     word_synonym: word_synonym
     word_translation: word_translation
@@ -26,6 +27,14 @@
                 id: word_name
                 padding: '0dp', '40dp'
                 text: 'name'
+
+            ScrollLabel:
+                color: font_color
+                font_size: '15dp'
+                halign: 'center'
+                id: word_level
+                padding: '0dp', '10dp'
+                text: 'level'
 
             ScrollLabel:
                 color: font_color
