--- a/source/app/main_screen/main_screen.kv
+++ b/source/app/main_screen/main_screen.kv
@@ -12,6 +12,7 @@
     word_antonym: word_antonym
     word_examples: word_examples
     word_meaning: word_meaning
+    word_level: word_level
     word_name: word_name
     word_synonym: word_synonym
     word_translation: word_translation
@@ -32,8 +33,16 @@
                     font_size: '30dp'
                     halign: 'center'
                     id: word_name
-                    padding: '0dp', '40dp'
+                    padding: '0dp', '30dp'
                     text: 'name'
+
+                ScrollLabel:
+                    color: font_color
+                    font_size: '15dp'
+                    halign: 'center'
+                    id: word_level
+                    padding: '0dp', '10dp'
+                    text: 'level'
 
                 ScrollLabel:
                     color: font_color
